--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -4,6 +4,11 @@ micromissile-homing=Homing micromissile
 micromissile-explosive=Explosive micromissile
 micromissile-incendiary=Incendiary micromissile
 micromissile-kinetic=Kinetic micromissile
+micromissile-pack=Micromissile pack
+micromissile-homing-pack=Homing micromissile pack
+micromissile-explosive-pack=Explosive micromissile pack
+micromissile-incendiary-pack=Incendiary micromissile pack
+micromissile-kinetic-pack=Kinetic micromissile pack
 
 [item-description]
 micromissile=Quantity over quality.
@@ -11,6 +16,11 @@ micromissile-homing=Actually tracks the target.
 micromissile-explosive=A lil' boom.
 micromissile-incendiary=The firestarter.
 micromissile-kinetic=Surprisingly heavy.
+micromissile-pack=Quantity over quality.
+micromissile-homing-pack=Actually tracks the target.
+micromissile-explosive-pack=A lil' boom.
+micromissile-incendiary-pack=The firestarter.
+micromissile-kinetic-pack=Surprisingly heavy.
 
 [recipe-name]
 micromissile=Micromissile
@@ -18,6 +28,12 @@ micromissile-homing=Homing micromissile
 micromissile-explosive=Explosive micromissile
 micromissile-incendiary=Incendiary micromissile
 micromissile-kinetic=Kinetic micromissile
+micromissile-pack=A pack of 20 micromissiles
+micromissile-homing-pack=A pack of 20 homing micromissiles
+micromissile-explosive-pack=A pack of 20 explosive micromissiles
+micromissile-incendiary-pack=A pack of 20 incendiary micromissiles
+micromissile-kinetic-pack=A pack of 20 kinetic micromissiles
+
 
 [technology-name]
 mass-rocketry=Mass rocketry
