--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -13,6 +13,16 @@ micromissile-incendiary-pack=Incendiary micromissile pack
 micromissile-kinetic-pack=Kinetic micromissile pack
 micromissile-arc-pack=Arc micromissile pack
 
+micromissile-explosive-q=Q-Explosive micromissile
+micromissile-incendiary-q=Q-Incendiary micromissile
+micromissile-kinetic-q=Q-Kinetic micromissile
+micromissile-arc-q=Q-Arc micromissile
+
+micromissile-explosive-q-pack=Q-Explosive micromissile pack
+micromissile-incendiary-q-pack=Q-Incendiary micromissile pack
+micromissile-kinetic-q-pack=Q-Kinetic micromissile pack
+micromissile-arc-q-pack=Q-Arc micromissile pack
+
 [item-description]
 micromissile=Quantity over quality.
 micromissile-homing=Actually tracks the target.
@@ -27,6 +37,16 @@ micromissile-explosive-pack=A lil' boom.
 micromissile-incendiary-pack=The firestarter.
 micromissile-kinetic-pack=Surprisingly heavy.
 micromissile-arc-pack=High voltage.
+
+micromissile-explosive-q=A lil' boom. Homing.
+micromissile-incendiary-q=The firestarter. Homing.
+micromissile-kinetic-q=Surprisingly heavy. Homing.
+micromissile-arc-q=High voltage. Homing.
+
+micromissile-explosive-q-pack=A lil' boom. Homing.
+micromissile-incendiary-q-pack=The firestarter. Homing.
+micromissile-kinetic-q-pack=Surprisingly heavy. Homing.
+micromissile-arc-q-pack=High voltage. Homing.
 
 [recipe-name]
 micromissile=Micromissile
@@ -43,9 +63,26 @@ micromissile-incendiary-pack=A pack of 20 incendiary micromissiles
 micromissile-kinetic-pack=A pack of 20 kinetic micromissiles
 micromissile-arc-pack=A pack of 20 arc micromissiles
 
+micromissile-explosive-q=Q-Explosive micromissile
+micromissile-incendiary-q=Q-Incendiary micromissile
+micromissile-kinetic-q=Q-Kinetic micromissile
+micromissile-arc-q=Q-Arc micromissile
+
+micromissile-explosive-q-pack=A pack of 20 Q-Explosive micromissiles
+micromissile-incendiary-q-pack=A pack of 20 Q-Incendiary micromissiles
+micromissile-kinetic-q-pack=A pack of 20 Q-Kinetic micromissiles
+micromissile-arc-pack-q=A pack of 20 Q-Arc micromissiles
+
 [technology-name]
 mass-rocketry=Mass rocketry
-
+q-rocketry=Q-rocketry
 
 [technology-description]
 mass-rocketry=New technologies and materials allow us to mass produce minitiarized missiles in huge amounts.
+q-rocketry=New quantum processors allow us to make homing missiles that we couldn't before.
+
+[setting-name]
+enable-q-homing=Enable Q-homing
+
+[setting-description]
+enable-q-homing=Enable installing quantum processors in missiles with payload to make them homing. Roughly doubles the number of items added by mod.
