Added cheap mode for crafting

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -81,8 +81,10 @@ q-rocketry=Q-rocketry
 mass-rocketry=New technologies and materials allow us to mass produce minitiarized missiles in huge amounts.
 q-rocketry=New quantum processors allow us to make homing missiles that we couldn't before.
 
-[setting-name]
+[mod-setting-name]
 enable-q-homing=Enable Q-homing
+cheap-mode=Cheap mode
 
-[setting-description]
+[mod-setting-description]
 enable-q-homing=Enable installing quantum processors in missiles with payload to make them homing. Roughly doubles the number of items added by mod.
+cheap-mode=Makes recipes for advanced micromissile upgrades 10x cheaper
