--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -13,6 +13,13 @@ micromissile-incendiary-pack=Incendiary micromissile pack
 micromissile-kinetic-pack=Kinetic micromissile pack
 micromissile-arc-pack=Arc micromissile pack
 
+micromissile-swarm-pack=Micromissile swarm pack
+micromissile-homing-swarm-pack=Homing micromissile swarm pack
+micromissile-explosive-swarm-pack=Explosive micromissile swarm pack
+micromissile-incendiary-swarm-pack=Incendiary micromissile swarm pack
+micromissile-kinetic-swarm-pack=Kinetic micromissile swarm pack
+micromissile-arc-swarm-pack=Arc micromissile swarm pack
+
 micromissile-explosive-q=Q-Explosive micromissile
 micromissile-incendiary-q=Q-Incendiary micromissile
 micromissile-kinetic-q=Q-Kinetic micromissile
@@ -22,6 +29,11 @@ micromissile-explosive-q-pack=Q-Explosive micromissile pack
 micromissile-incendiary-q-pack=Q-Incendiary micromissile pack
 micromissile-kinetic-q-pack=Q-Kinetic micromissile pack
 micromissile-arc-q-pack=Q-Arc micromissile pack
+
+micromissile-explosive-q-swarm-pack=Q-Explosive micromissile swarm pack
+micromissile-incendiary-q-swarm-pack=Q-Incendiary micromissile swarm pack
+micromissile-kinetic-q-swarm-pack=Q-Kinetic micromissile swarm pack
+micromissile-arc-q-swarm-pack=Q-Arc micromissile swarm pack
 
 [item-description]
 micromissile=Quantity over quality.
@@ -38,6 +50,13 @@ micromissile-incendiary-pack=The firestarter.
 micromissile-kinetic-pack=Surprisingly heavy.
 micromissile-arc-pack=High voltage.
 
+micromissile-swarm-pack=REALLY Quantity over quality.
+micromissile-homing-swarm-pack=Actually tracks the target.
+micromissile-explosive-swarm-pack=A lil' boom. Many of them.
+micromissile-incendiary-swarm-pack=The firestarter.
+micromissile-kinetic-swarm-pack=Surprisingly heavy.
+micromissile-arc-swarm-pack=High voltage.
+
 micromissile-explosive-q=A lil' boom. Homing.
 micromissile-incendiary-q=The firestarter. Homing.
 micromissile-kinetic-q=Surprisingly heavy. Homing.
@@ -47,6 +66,11 @@ micromissile-explosive-q-pack=A lil' boom. Homing.
 micromissile-incendiary-q-pack=The firestarter. Homing.
 micromissile-kinetic-q-pack=Surprisingly heavy. Homing.
 micromissile-arc-q-pack=High voltage. Homing.
+
+micromissile-explosive-q-swarm-pack=A lil' boom. Many of them.
+micromissile-incendiary-q-swarm-pack=The firestarter.
+micromissile-kinetic-q-swarm-pack=Surprisingly heavy.
+micromissile-arc-q-swarm-pack=High voltage.
 
 [recipe-name]
 micromissile=Micromissile
@@ -63,6 +87,13 @@ micromissile-incendiary-pack=A pack of 20 incendiary micromissiles
 micromissile-kinetic-pack=A pack of 20 kinetic micromissiles
 micromissile-arc-pack=A pack of 20 arc micromissiles
 
+micromissile-swarm-pack=A pack of 20 micromissiles
+micromissile-homing-swarm-pack=A pack of 20 homing micromissiles
+micromissile-explosive-swarm-pack=A pack of 20 explosive micromissiles
+micromissile-incendiary-swarm-pack=A pack of 20 incendiary micromissiles
+micromissile-kinetic-swarm-pack=A pack of 20 kinetic micromissiles
+micromissile-arc-swarm-pack=A pack of 20 arc micromissiles
+
 micromissile-explosive-q=Q-Explosive micromissile
 micromissile-incendiary-q=Q-Incendiary micromissile
 micromissile-kinetic-q=Q-Kinetic micromissile
@@ -71,14 +102,21 @@ micromissile-arc-q=Q-Arc micromissile
 micromissile-explosive-q-pack=A pack of 20 Q-Explosive micromissiles
 micromissile-incendiary-q-pack=A pack of 20 Q-Incendiary micromissiles
 micromissile-kinetic-q-pack=A pack of 20 Q-Kinetic micromissiles
-micromissile-arc-pack-q=A pack of 20 Q-Arc micromissiles
+micromissile-arc-q-pack=A pack of 20 Q-Arc micromissiles
+
+micromissile-explosive-q-swarm-pack=A pack of 20 Q-Explosive micromissiles
+micromissile-incendiary-q-swarm-pack=A pack of 20 Q-Incendiary micromissiles
+micromissile-kinetic-q-swarm-pack=A pack of 20 Q-Kinetic micromissiles
+micromissile-arc-q-swarm-pack=A pack of 20 Q-Arc micromissiles
 
 [technology-name]
 mass-rocketry=Mass rocketry
+mass-rocketry-2=Mass rocketry
 q-rocketry=Q-rocketry
 
 [technology-description]
 mass-rocketry=New technologies and materials allow us to mass produce minitiarized missiles in huge amounts.
+mass-rocketry-2=Never enough missiles.
 q-rocketry=New quantum processors allow us to make homing missiles that we couldn't before.
 
 [mod-setting-name]
