Age of production

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -74,6 +74,7 @@ micromissile-arc-q-swarm-pack=High voltage.
 
 [recipe-name]
 micromissile=Micromissile
+micromissile-alt=Micromissile (Alternate recipe)
 micromissile-homing=Homing micromissile
 micromissile-explosive=Explosive micromissile
 micromissile-incendiary=Incendiary micromissile
