update Artillery Missile pack (#2)
* Add CN translation

* Update Artillery Missile pack

---------

Co-authored-by: Lily <33602963+IonShieldQuad@users.noreply.github.com>

--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -20,6 +20,13 @@ micromissile-incendiary-swarm-pack=燃烧微型导弹 多弹头型
 micromissile-kinetic-swarm-pack=动能微型导弹 多弹头型
 micromissile-arc-swarm-pack=电击微型导弹 多弹头型
 
+micromissile-artillery-pack=微型导弹 重炮发射型
+micromissile-homing-artillery-pack=pack=制导微型导弹 重炮发射型
+micromissile-explosive-artillery-pack=高爆微型导弹 重炮发射型
+micromissile-incendiary-artillery-pack=燃烧微型导弹 重炮发射型
+micromissile-kinetic-artillery-pack=动能微型导弹 重炮发射型
+micromissile-arc-artillery-pack=电击微型导弹 重炮发射型
+
 micromissile-explosive-q=制导高爆微型导弹
 micromissile-incendiary-q=制导燃烧微型导弹
 micromissile-kinetic-q=制导动能微型导弹
@@ -35,42 +42,62 @@ micromissile-incendiary-q-swarm-pack=制导燃烧微型导弹 多弹头型
 micromissile-kinetic-q-swarm-pack=制导动能微型导弹 多弹头型
 micromissile-arc-q-swarm-pack=制导电击微型导弹 多弹头型
 
+
+micromissile-explosive-q-artillery-pack=制导高爆微型导弹 重炮发射型
+micromissile-incendiary-q-artillery-pack=制导燃烧微型导弹 重炮发射型
+micromissile-kinetic-q-artillery-pack=制导动能微型导弹 重炮发射型
+micromissile-arc-q-artillery-pack=制导电击微型导弹 重炮发射型
+
+
 [item-description]
 micromissile=数量比质量更重要.
 micromissile-homing=实时跟踪目标.
 micromissile-explosive=一点 Lily 的爆炸.
 micromissile-incendiary=带来火焰!
 micromissile-kinetic=出奇的重.
-micromissile-arc=带来高压!
+micromissile-arc=高压电!
+
 
 micromissile-pack=数量比质量更重要.
 micromissile-homing-pack=实时跟踪目标.
 micromissile-explosive-pack=一点 Lily 的爆炸.
 micromissile-incendiary-pack=带来火焰!
 micromissile-kinetic-pack=出奇的重.
-micromissile-arc-pack=带来高压!
+micromissile-arc-pack=高压电!
+
+micromissile-artillery-pack=数量比质量更重要. 使用重炮远程发射.
+micromissile-homing-artillery-pack=实时跟踪目标. (更) 高准确度!使用重炮远程发射.
+micromissile-explosive-artillery-pack=一点 Lily 的爆炸. 使用重炮远程发射.
+micromissile-incendiary-artillery-pack=带来火焰! 使用重炮远程发射.
+micromissile-kinetic-artillery-pack=出奇的重. 使用重炮远程发射.
+micromissile-arc-artillery-pack=高压电! 使用重炮远程发射.
 
 micromissile-swarm-pack=数量真的比质量更重要!
-micromissile-homing-swarm-pack=实时跟踪目标.
+micromissile-homing-swarm-pack=实时跟踪目标.(更) 高准确度!
 micromissile-explosive-swarm-pack=一点 Lily 的爆炸. 更多!
 micromissile-incendiary-swarm-pack=带来火焰!
 micromissile-kinetic-swarm-pack=出奇的重.
-micromissile-arc-swarm-pack=带来高压!
+micromissile-arc-swarm-pack=高压电!
 
-micromissile-explosive-q=一点 Lily 的爆炸. 自动制导!
-micromissile-incendiary-q=带来火焰! 自动制导!
-micromissile-kinetic-q=出奇的重. 自动制导!
-micromissile-arc-q=带来高压! 自动制导!
+micromissile-explosive-q=一点 Lily 的爆炸. 自动制导!(更) 高准确度!
+micromissile-incendiary-q=带来火焰! 自动制导!(更) 高准确度!
+micromissile-kinetic-q=出奇的重. 自动制导!(更) 高准确度!
+micromissile-arc-q=高压电! 自动制导!(更) 高准确度!
 
-micromissile-explosive-q-pack=一点 Lily 的爆炸. 自动制导!
-micromissile-incendiary-q-pack=带来火焰! 自动制导!
-micromissile-kinetic-q-pack=出奇的重. 自动制导!
-micromissile-arc-q-pack=带来高压! 自动制导!
+micromissile-explosive-q-pack=一点 Lily 的爆炸. 自动制导!(更) 高准确度!
+micromissile-incendiary-q-pack=带来火焰! 自动制导!(更) 高准确度!
+micromissile-kinetic-q-pack=出奇的重. 自动制导!(更) 高准确度!
+micromissile-arc-q-pack=高压电! 自动制导!(更) 高准确度!
 
 micromissile-explosive-q-swarm-pack=一点 Lily 的爆炸. 更多!
 micromissile-incendiary-q-swarm-pack=带来火焰!
 micromissile-kinetic-q-swarm-pack=出奇的重.
-micromissile-arc-q-swarm-pack=带来高压!
+micromissile-arc-q-swarm-pack=高压电!
+
+micromissile-explosive-q-artillery-pack=一点 Lily 的爆炸. 自动制导!(更) 高准确度!使用重炮远程发射.
+micromissile-incendiary-q-artillery-pack=带来火焰! 自动制导!(更) 高准确度!使用重炮远程发射.
+micromissile-kinetic-q-artillery-pack=出奇的重. 自动制导!(更) 高准确度!使用重炮远程发射.
+micromissile-arc-q-artillery-pack=高压电! 自动制导!(更) 高准确度!使用重炮远程发射.
 
 [recipe-name]
 micromissile=微型导弹
@@ -87,6 +114,13 @@ micromissile-explosive-pack=一组20发  高爆微型导弹
 micromissile-incendiary-pack=一组20发  燃烧微型导弹
 micromissile-kinetic-pack=一组20发  动能微型导弹
 micromissile-arc-pack=一组20发  电击微型导弹
+
+micromissile-artillery-pack=微型导弹 重炮发射型
+micromissile-homing-artillery-pack=pack=制导微型导弹 重炮发射型
+micromissile-explosive-artillery-pack=高爆微型导弹 重炮发射型
+micromissile-incendiary-artillery-pack=燃烧微型导弹 重炮发射型
+micromissile-kinetic-artillery-pack=动能微型导弹 重炮发射型
+micromissile-arc-artillery-pack=电击微型导弹 重炮发射型
 
 micromissile-swarm-pack=一组20发 微型导弹
 micromissile-homing-swarm-pack=一组20发  制导微型导弹
@@ -110,15 +144,25 @@ micromissile-incendiary-q-swarm-pack=一组20发  制导燃烧微型导弹
 micromissile-kinetic-q-swarm-pack=一组20发  制导动能微型导弹
 micromissile-arc-q-swarm-pack=一组20发  制导电击微型导弹
 
+micromissile-explosive-q-artillery-pack=制导高爆微型导弹 重炮发射型
+micromissile-incendiary-q-artillery-pack=制导燃烧微型导弹 重炮发射型
+micromissile-kinetic-q-artillery-pack=制导动能微型导弹 重炮发射型
+micromissile-arc-q-artillery-pack=制导电击微型导弹 重炮发射型
+
 [technology-name]
 mass-rocketry=成群的导弹
 mass-rocketry-2=成群的导弹 2
+mass-artillery-rocketry=成群的导弹 重炮发射
 q-rocketry=制导导弹
+q-artillery-rocketry=制导导弹 重炮发射
+
 
 [technology-description]
 mass-rocketry=新技术和新材料使我们能够大批量生产小型导弹.
 mass-rocketry-2=导弹永远不够用.
+mass-artillery-rocketry=只要付出一些努力，我们就可以直接用重炮发射导弹.
 q-rocketry=新的量子处理器使我们能够制造以前无法制造的自动制导导弹.
+q-artillery-rocketry=将制导技术与重炮相结合可大幅提升导弹精度.
 
 [mod-setting-name]
 enable-q-homing=启用自动制导导弹
@@ -127,3 +171,9 @@ cheap-mode=成本降低模式
 [mod-setting-description]
 enable-q-homing=允许在装有有效载荷的导弹上安装量子处理器，使其自动制导! mod添加的物品数量大致会翻倍.
 cheap-mode=使高级微型导弹升级的配方成本降低 10 倍.
+
+[mod-name]
+lilys-mm=Lily的微型导弹
+
+[mod-description]
+lilys-mm=导弹根本不够用！数量大于质量！
