Artillery Missile packs

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -20,6 +20,13 @@ micromissile-incendiary-swarm-pack=Incendiary micromissile swarm pack
 micromissile-kinetic-swarm-pack=Kinetic micromissile swarm pack
 micromissile-arc-swarm-pack=Arc micromissile swarm pack
 
+micromissile-artillery-pack=Micromissile artillery pack
+micromissile-homing-artillery-pack=Homing micromissile artillery pack
+micromissile-explosive-artillery-pack=Explosive micromissile artillery pack
+micromissile-incendiary-artillery-pack=Incendiary micromissile artillery pack
+micromissile-kinetic-artillery-pack=Kinetic micromissile artillery pack
+micromissile-arc-artillery-pack=Arc micromissile artillery pack
+
 micromissile-explosive-q=Q-Explosive micromissile
 micromissile-incendiary-q=Q-Incendiary micromissile
 micromissile-kinetic-q=Q-Kinetic micromissile
@@ -34,6 +41,11 @@ micromissile-explosive-q-swarm-pack=Q-Explosive micromissile swarm pack
 micromissile-incendiary-q-swarm-pack=Q-Incendiary micromissile swarm pack
 micromissile-kinetic-q-swarm-pack=Q-Kinetic micromissile swarm pack
 micromissile-arc-q-swarm-pack=Q-Arc micromissile swarm pack
+
+micromissile-explosive-q-artillery-pack=Q-Explosive micromissile artillery pack
+micromissile-incendiary-q-artillery-pack=Q-Incendiary micromissile artillery pack
+micromissile-kinetic-q-artillery-pack=Q-Kinetic micromissile artillery pack
+micromissile-arc-q-artillery-pack=Q-Arc micromissile artillery pack
 
 [item-description]
 micromissile=Quantity over quality.
@@ -57,6 +69,13 @@ micromissile-incendiary-swarm-pack=The firestarter.
 micromissile-kinetic-swarm-pack=Surprisingly heavy.
 micromissile-arc-swarm-pack=High voltage.
 
+micromissile-artillery-pack=REALLY Quantity over quality. Fired from artillery.
+micromissile-homing-artillery-pack=Actually tracks the target. Fired from artillery, high(er) accuracy.
+micromissile-explosive-artillery-pack=A lil' boom. Many of them. Fired from artillery.
+micromissile-incendiary-artillery-pack=The firestarter. Fired from artillery.
+micromissile-kinetic-artillery-pack=Surprisingly heavy. Fired from artillery.
+micromissile-arc-artillery-pack=High voltage. Fired from artillery.
+
 micromissile-explosive-q=A lil' boom. Homing.
 micromissile-incendiary-q=The firestarter. Homing.
 micromissile-kinetic-q=Surprisingly heavy. Homing.
@@ -67,10 +86,15 @@ micromissile-incendiary-q-pack=The firestarter. Homing.
 micromissile-kinetic-q-pack=Surprisingly heavy. Homing.
 micromissile-arc-q-pack=High voltage. Homing.
 
-micromissile-explosive-q-swarm-pack=A lil' boom. Many of them.
-micromissile-incendiary-q-swarm-pack=The firestarter.
-micromissile-kinetic-q-swarm-pack=Surprisingly heavy.
-micromissile-arc-q-swarm-pack=High voltage.
+micromissile-explosive-q-swarm-pack=A lil' boom. Many of them. Homing.
+micromissile-incendiary-q-swarm-pack=The firestarter. Homing.
+micromissile-kinetic-q-swarm-pack=Surprisingly heavy. Homing.
+micromissile-arc-q-swarm-pack=High voltage. Homing.
+
+micromissile-explosive-q-artillery-pack=A lil' boom. Many of them. Fired from artillery, high(er) accuracy.
+micromissile-incendiary-q-artillery-pack=The firestarter. Fired from artillery, high(er) accuracy.
+micromissile-kinetic-q-artillery-pack=Surprisingly heavy. Fired from artillery, high(er) accuracy.
+micromissile-arc-q-artillery-pack=High voltage. Fired from artillery, high(er) accuracy.
 
 [recipe-name]
 micromissile=Micromissile
@@ -95,6 +119,13 @@ micromissile-incendiary-swarm-pack=A pack of 20 incendiary micromissiles
 micromissile-kinetic-swarm-pack=A pack of 20 kinetic micromissiles
 micromissile-arc-swarm-pack=A pack of 20 arc micromissiles
 
+micromissile-artillery-pack=A pack of 40 micromissiles. Fired from artillery.
+micromissile-homing-artillery-pack=A pack of 40 homing micromissiles. Fired from artillery, high(er) accuracy.
+micromissile-explosive-artillery-pack=A pack of 40 explosive micromissiles. Fired from artillery.
+micromissile-incendiary-artillery-pack=A pack of 40 incendiary micromissiles. Fired from artillery.
+micromissile-kinetic-artillery-pack=A pack of 40 kinetic micromissiles. Fired from artillery.
+micromissile-arc-artillery-pack=A pack of 40 arc micromissiles. Fired from artillery.
+
 micromissile-explosive-q=Q-Explosive micromissile
 micromissile-incendiary-q=Q-Incendiary micromissile
 micromissile-kinetic-q=Q-Kinetic micromissile
@@ -110,16 +141,24 @@ micromissile-incendiary-q-swarm-pack=A pack of 20 Q-Incendiary micromissiles
 micromissile-kinetic-q-swarm-pack=A pack of 20 Q-Kinetic micromissiles
 micromissile-arc-q-swarm-pack=A pack of 20 Q-Arc micromissiles
 
+micromissile-explosive-q-artillery-pack=A pack of 40 Q-Explosive micromissiles. Fired from artillery, high(er) accuracy.
+micromissile-incendiary-q-artillery-pack=A pack of 40 Q-Incendiary micromissiles. Fired from artillery, high(er) accuracy.
+micromissile-kinetic-q-artillery-pack=A pack of 40 Q-Kinetic micromissiles. Fired from artillery, high(er) accuracy.
+micromissile-arc-q-artillery-pack=A pack of 40 Q-Arc micromissiles. Fired from artillery, high(er) accuracy.
+
 [technology-name]
 mass-rocketry=Mass rocketry
 mass-rocketry-2=Mass rocketry
+mass-artillery-rocketry=Mass artillery rocketry
 q-rocketry=Q-rocketry
+q-artillery-rocketry=Artillery Q-rocketry
 
 [technology-description]
 mass-rocketry=New technologies and materials allow us to mass produce minitiarized missiles in huge amounts.
 mass-rocketry-2=Never enough missiles.
+mass-artillery-rocketry=With some effort, it is possible to fire the missiles directly from artillery cannons.
 q-rocketry=New quantum processors allow us to make homing missiles that we couldn't before.
-
+q-artillery-rocketry=Combining Q-rocketry with artillery drastically reduces missile scattering.
 [mod-setting-name]
 enable-q-homing=Enable Q-homing
 cheap-mode=Cheap mode
